All_Component_DX/force-app/main/default/objects/SM_Attributes_Template__c/fields/SM_Active__c.field-meta.xml
<CustomField>
    <fullName>SM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the template is active or inactive</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>