All_Component_DX/force-app/main/default/objects/SM_Attributes_Template__c/fields/SM_Picklist_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Picklist_Id__c</fullName>
    <description>Stores Picklist Id’s referenced with in the template as comma &quot;,&quot; separated values.</description>
    <label>Picklist Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>