All_Component_DX/force-app/main/default/objects/SM_Attributes_Template__c/fields/SM_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>SM_Template_Description__c</fullName>
    <description>Template description</description>
    <label>Template Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>