All_Component_DX/force-app/main/default/objects/SM_Attributes_Template__c/fields/SM_Title__c.field-meta.xml
<CustomField>
    <fullName>SM_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>